syntax = "proto3";

package grpc;

option go_package = "https://github.com/ImMaldy/laboratorio2SD/tree/4ab5257af5d27c40df8923a5e516cd35b314c830/proto";

message continente{
    string nombre = 1;
    string apellido = 2;
    string estado = 3;
}

message registro_datanode{
    string id = 1;
    string nombre = 2;
    string apellido = 3;
}

message consulta_id{
    string id = 1;
}

message respuesta_id{
    string nombre = 1;
    string apellido = 2;
}

message consulta_estado{
    string estado = 1;
}

message respuesta_estado{
    string nombre = 1;
    string apellido = 2;
}
